added contact page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -108,10 +108,9 @@
 
    <h1 class="text-center">WELCOME TO MY SPACE</h1>
    <p class="text-center">Discover,share and connect to Rails Blog from<br>the world's largest streaming library</p>
-   <div class="span6 image"><img src="/assets/appu.jpeg" class="img-rounded"></div>
+   <div class="span6 image"><img src="/assets/flower.jpeg" class="img-rounded"></div>
 
    <%=  link_to 'About Me', about_index_path, :class => "btn btn-primary about-button" %>
-  <%= link_to 'My Blog', :class => "btn btn-primary about-button" %>
  
  
 
