--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,7 +14,7 @@
 <div class="jumbotron text-center">
   <h1>My Profile</h1>
   <p>It describes about my personal details and acadamics!</p>
-  <img src="/assets/appu.jpeg" class="img-circle" alt="Me" width="350" height="350" />
+  <img src="/assets/flower.jpeg" class="img-circle" alt="Me" width="350" height="350" />
   </div>
   <div class="container">
   <div class="row">
