--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,27 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default navbar-collapse-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <p class="navbar-brand"><%= link_to 'Apoorva Blog', root_path %></p>
+
+        </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+       <li><%= link_to 'Welcome', welcome_index_path %></li>
+       <li class="text-success"><%= link_to 'About Me', about_index_path %></li>
+       <li><%= link_to 'Contacts', contacts_path %></li>    
+      </ul>
+    </div>
+  </div>
+</nav>
     <%= yield %>
   </body>
 </html>
+
